# TableControl

./: .gitignore  CMakeLists.txt  README.md  answermanager.cpp  answermanager.h  main.cpp  qml.qrc  requestactions.h  requestmanager.cpp  requestmanager.h  threadcontroller.cpp  threadcontroller.h
android/: AndroidManifest.xml  activityresultmanager.cpp  activityresultmanager.h  androidutils.cpp  androidutils.h  build.gradle
android/src/: FileUtils.java  NetUtils.java
file/: filemanager.cpp  filemanager.h
ios/: Info.plist  LaunchScreen.storyboard
ios/Assets.xcassets/Background.colorset/: Contents.json
net/: abstractmessage.cpp  abstractmessage.h  filepartmessage.cpp  filepartmessage.h  floatvaluemessage.cpp  floatvaluemessage.h  foldercontentmessage.cpp  foldercontentmessage.h  frames.h  intvaluemessage.cpp  intvaluemessage.h  netclient.cpp  netclient.h  netmanager.cpp  netmanager.h  stringmessage.cpp  stringmessage.h
qml/: Main.qml
qml/Content/: ContentButton.qml  ContentDelegate.qml  ContentPage.qml  qmldir
qml/Elements/: Busy.qml  CustomDialog.qml  DefaultText.qml  FooterMenuBtn.qml  LargePreview.qml  MButton.qml  MSlider.qml  Preview.qml  ProgressScreen.qml  RegisterHeader.qml  RoundIconBtn.qml  qmldir
qml/Playlist/: DelegateContent.qml  DelegateItem.qml  DelegateSwipable.qml  PlaylistDelegate.qml  PlaylistPage.qml  PlaylistView.qml  PlaylistWindow.qml  qmldir
qml/Settings/: AdminSettingsPage.qml  SettingTextEdit.qml  SettingsHeader.qml  SettingsPage.qml  qmldir
qml/Transport/: TransportPanel.qml  qmldir
ui/: contentnode.cpp  contentnode.h  devicecontentmodel.cpp  devicecontentmodel.h  firmware.cpp  firmware.h  firmwaremanager.cpp  firmwaremanager.h  hardware.cpp  hardware.h  libraryelement.cpp  libraryelement.h  librarymodel.cpp  librarymodel.h  playlistelement.cpp  playlistelement.h  playlistmodel.cpp  playlistmodel.h  progress.cpp  progress.h  progressmanager.cpp  progressmanager.h  transport.cpp  transport.h  uitransport.cpp  uitransport.h
